Bug 330546 - Widget Explorer sometimes appears on the wrong side of the screen
Summary: Widget Explorer sometimes appears on the wrong side of the screen
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Widget Explorer sidebar (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-29 15:43 UTC by David Edmundson
Modified: 2014-02-04 13:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2014-01-29 15:43:30 UTC
Not reproducible always.
Comment 1 David Edmundson 2014-01-30 15:47:23 UTC Comment hidden (admin, off-topic, spam, typo)
Comment 2 David Edmundson 2014-02-04 13:55:40 UTC
Git commit 27e5a2ab4638bb405fdf752ed688a776a5e62b1b by David Edmundson.
Committed on 03/02/2014 at 15:46.
Pushed by davidedmundson into branch 'master'.

Fix multiscreen popup positioning

This patch makes two changes:
 1) don't rely on window()->screen() it's rubbish.

 2) if the dialog is parented to a desktop, we want to position
 inside the parent, not outside the parent object

REVIEW: 115448

M  +43   -11   src/declarativeimports/core/dialog.cpp
M  +3    -0    src/declarativeimports/core/dialog.h

http://commits.kde.org/plasma-framework/27e5a2ab4638bb405fdf752ed688a776a5e62b1b